Fix T46382: Crash sharing particle system with clump or rough curves

Made those curves local to thread evaluation now, so there is no
threading conflict accessing them from evaluation threads anymore.