source/blender/blenkernel/BKE_particle.h
@@ -156,6 +156,9 @@ typedef struct ParticleThreadContext {
 	float *vg_length, *vg_clump, *vg_kink;
 	float *vg_rough1, *vg_rough2, *vg_roughe;
 	float *vg_effector;
+
+	struct CurveMapping *clumpcurve;
+	struct CurveMapping *roughcurve;
 } ParticleThreadContext;
 
 typedef struct ParticleTask {
